--- a/src/pages/Main/styles.css
+++ b/src/pages/Main/styles.css
@@ -14,11 +14,13 @@
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
+  align-items: center;
 
 }
 
 .cardmain{
-  width: 150px;
+  width: 160px;
+  align-items: center;
   margin-left: 2%;
   margin-top: 2%;
   margin-right: 2%;
